[bdist_wheel]
universal=1

[metadata]
description_file = README.md
long_description_content_type=text/markdown

[flake8]
ignore=E203, W503
max-line-length=200
per-file-ignores=
    csp/lazy/__init__.py:F401, F403
    csp/lazy/base.py:F401
    csp/lazy/calculations/__init__.py:F401, F403
    csp/lazy/control/__init__.py:F401
    csp/lazy/input/__init__.py:F401, F403
    csp/lazy/output/__init__.py:F401
    csp/streaming/__init__.py:F401, F403
    csp/streaming/calculations/__init__.py:F401, F403
    csp/streaming/control/__init__.py:F401
    csp/streaming/input/__init__.py:F401, F403
    csp/streaming/output/__init__.py:F401

[bumpversion]
current_version = 0.2.0
commit = True
tag = False

[bumpversion:file:csp/_version.py]
search = __version__ = "{current_version}"
replace = __version__ = "{new_version}"

[bumpversion:file:setup.py]
search = version="{current_version}"
replace = version="{new_version}"

[check-manifest]
ignore = 
	csp/tests/**
